<resources>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="no_students">No students found.</string>
    <string name="no_announcements">No announcements found.</string>
    <string name="app_name">Pupil Watch</string>
    <string name="tittle">PUPIL WATCH</string>
    <string name="head">Registration</string>
    <string name="tag">A Parent school\n communication platform</string>
    <string name="tag_s">Select the type of the user</string>
    <string name="parent">Parent</string>
    <string name="stdnt">Teacher</string>
    <string name="admn">Admin</string>
    <string name="terms"><u>Privacy Policy / Terms</u></string>

    <string name="detail">Please enter your mobile number \n(Provided at school)</string>
    <string name="btn_otp">Get OTP</string>
    <string name="title_activity_kid_details">Your Kids @ XYZ school</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--///used in ParentsProfile.xml-->

    <string name="name">Name :</string>
    <string name="contact">Contact Number :</string>
    <string name="mail">Contact mail :</string>
    <string name="add">Address :</string>
    <string name="add_string">Flat 222,\nStreet No.8,\nPark Avenue,\nBanjara Hills,Hyderabad,500006</string>
    <string name="prof">Profession :</string>
    <string name="butn">  Report a change in the above data</string>

    <!--///used in Feedback.xml-->

    <string name="feedback_msg">Provide your feedback below</string>
    <string name="textbox_hint">Feedback Comments</string>
    <string name="submit_btn">Submit feedback</string>

    <!--///used in ContactUs.xml-->

    <string name="Contact_us_msg">Please reach out to us by sending us your details. We shall reach out to you.</string>
    <string name="Contact_us_mail">Mail    :   </string>
    <string name="Contact_us_phone">Phone :</string>
    <string name="Contact_us_btn">submit</string>
    <string name="Contact_us_reason">Reason for inquiry:</string>
    <string name="title_activity_student_list">StudentListActivity</string>
    <string name="title_activity_student_profile">StudentProfileActivity</string>
    <string name="title_activity_my_profile2">MyProfileActivity2</string>
    <string name="title_activity_announcement2">AnnouncementActivity2</string>
    <string name="title_activity_parent_profile">ParentProfileActivity</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_contact_us">ContactUsActivity</string>
    <string name="title_activity_attendance">AttendanceActivity</string>

    <!--///used in Attendance.xml-->
    <string name="at_month">Month:</string>
    <string name="at_year">Year:</string>
    <string name="at_work_days">Working Days:</string>
    <string name="at_holdays">Holidays:</string>
    <string name="at_absent">Absence:</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="title_activity_homework">HomeworkActivity</string>
    <string name="title_activity_policynterms">PolicyntermsActivity</string>
</resources>
