<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context="com.example.android.pupil_watch.ParentProfile">

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>
    </LinearLayout>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    >

    <LinearLayout
        android:id="@+id/name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_att"
            android:layout_marginTop="48dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/Parent_name"
            android:padding="10dp"
            android:layout_marginTop="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Mr. XYZENIAR"
            android:textColor="@android:color/black"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Contact_no"
        android:layout_below="@+id/name"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cont_att"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/contact"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/parent_contact"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="999-999-9999"
            android:textColor="@android:color/black"
            />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/Contact_mail"
        android:layout_below="@+id/Contact_no"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cont_mail_att"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/mail"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/Parent_mail"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="xyzeniar99@gmail.com"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Address"
        android:layout_below="@+id/Contact_mail"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_att"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/Parent_add"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/add_string"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Profession"
        android:layout_below="@+id/Address"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prof_att"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/prof"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/Parent_Profession"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="Priate Employee"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Profession"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_sq_corner"
        android:text="@string/butn"
        android:textAllCaps="false"
        />
</RelativeLayout>

</android.support.v4.widget.DrawerLayout>
