<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize">

    <CalendarView
        android:id="@+id/Calender_view"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_marginTop="8dp">

    </CalendarView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at_month"
            android:textColor="#000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_work_days"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/At_Work_Days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="25"
                android:textColor="#000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_holdays"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/At_Holidays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="6"
                android:textColor="#000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_absent"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/At_Absent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="15"
                android:textColor="#000"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/at_year"
            android:textColor="#000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_work_days"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/At_yr_work_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="215"
                android:textColor="#000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_holdays"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/At_yr_holidays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="150"
                android:textColor="#000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_absent"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/At_yr_absent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="10"
                android:textColor="#000"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
